# bat

./: .gitignore  Cargo.toml  README.md  plugins.h
.github/workflows/: clippy_check.yml
bat-cli/: Cargo.toml
bat-cli/src/: batcave.rs  cli.yml  main.rs
commands/mobile/: Cargo.toml  cbindgen.toml
commands/mobile/src/: generator.rs  lib.rs
commands/mobile/src/v2/: mod.rs
commands/mobile/src/v3_0/: mod.rs
commands/nets/: Cargo.toml
commands/nets/src/: lib.rs
plugins/: Cargo.toml
plugins/src/: arg.rs  configuration.rs  gherkin.rs  lib.rs  macros.rs  plugins.rs
