[package]
name = 'plugins'
version = '0.1.0'
authors = ['Pedro Mangabeira <pedro.mangabeira@sky.uk>']
edition = '2018'

[dependencies]
libloading = '0.5'
log = '0.4'
glob = '0.3'
rmp = '0.8'
rmp-serde = '0.14'
rmpv = '0.4'
bytes = '0.5'

[dependencies.serde]
version = '1'
features = ['derive']

[build-dependencies]
cbindgen = '0.12.0'
